--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,27 @@ body {
   color: var(--mainBlack);
 }
 
+.btn-pink {
+  color: var(--mainPink) !important;
+  border-color: var(--mainPink) !important;
+}
+
+.btn-black {
+  color: var(--mainBlack) !important;
+  border-color: var(--mainBlack) !important;
+}
+
+.btn-black:hover {
+  color: var(--mainPink) !important;
+  background-color: var(--mainBlack);
+  transition: 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+.btn-pink:hover {
+  color: var(--mainBlack) !important;
+  background-color: var(--mainPink);
+}
+
 .navbar-toggler {
   outline: none !important;
 }
@@ -97,4 +118,31 @@ body {
 .banner-link:hover {
   background: var(--mainBlack);
   color: var(--mainPink);
+}
+
+@media (max-width: 770px) {
+  .about-text {
+    width: 100% !important;
+  }
+}
+
+.about-img_container {
+  position: relative;
+}
+
+.about-img_container::before {
+  content: "";
+  position: absolute;
+  top: -1.5rem;
+  left: -1.7rem;
+  width: 100%;
+  height: 100%;
+  outline: 0.5rem solid var(--mainYellow);
+  z-index: -1;
+  transition: all 1s linear;
+}
+
+.about-img_container:hover::before {
+  top: 0;
+  left: 0;
 }
